# lsp-ai-jj

crates/lsp-ai/: Cargo.toml
crates/lsp-ai-jj/: Cargo.toml
crates/lsp-ai-jj/logs/: rust_wakaapi.log.2025-04-19
crates/lsp-ai-jj/src/: chat_history.rs  config.rs  main.rs  memory_worker.rs  transformer_worker.rs
crates/lsp-ai-jj/src/logs/: lisp_ai_jj.log.2025-04-19  rust_wakaapi.log.2025-04-19  rust_wakaapi.log.2025-04-20  rust_wakaapi.log.2025-04-24
crates/lsp-ai-jj/src/memory_backends/: file_store.rs  mod.rs  sureal_store.rs  surrealdb_store.rs  vector_store.rs
crates/lsp-ai-jj/src/memory_backends/logs/: rust_wakaapi.log.2025-04-20  rust_wakaapi.log.2025-04-21  rust_wakaapi.log.2025-04-22  rust_wakaapi.log.2025-04-23  rust_wakaapi.log.2025-04-24
crates/lsp-ai-jj/src/memory_backends/postgresml/: mod.rs
crates/lsp-ai-jj/src/memory_backends/surrealdb/: mod.rs
crates/lsp-ai-jj/src/splitters/: mod.rs  tree_sitter.rs
crates/lsp-ai-jj/src/transformer_backends/: anthropic.rs  gemini.rs  mod.rs
crates/lsp-ai/src/: chat_history.rs  config.rs  main.rs  transformer_worker.rs
crates/lsp-ai/src/logs/: rust_wakaapi.log.2025-04-19
crates/lsp-ai/src/memory_backends/: file_store.rs  mod.rs  sureal_store.rs  sureal_store2.rs
crates/lsp-ai/src/transformer_backends/: gemini.rs
crates/splitter-tree-sitter/: Cargo.toml
crates/splitter-tree-sitter/src/: lib.rs
crates/splitter-tree-sitter/src/logs/: rust_wakaapi.log.2025-04-21
crates/utils-tree-sitter/: Cargo.toml
crates/utils-tree-sitter/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: dist.rs
xtask/src/logs/: rust_wakaapi.log.2025-04-19
