[package]
name = "lsp-ai-jj"
version = "0.7.1"

description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
ropey = "1.6.1"
rand = "0.9.1"
serde = "1.0.190"
serde_json = "1.0.108"
hf-hub = { git = "https://github.com/huggingface/hf-hub", version = "0.4.2" }
tokenizers = "0.21.1"
parking_lot = "0.12.1"
once_cell = "1.19.0"
directories = "6.0.0"
llama-cpp-2 = { version = "0.1.55", optional = true }
minijinja = { version = "2.9.0", features = ["loader"] }

tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "registry",
] }
tracing = "0.1.40"
tracing-error = "0.2.1"
tracing-appender = "0.2.3"

xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
ignore = "0.4.22"
pgml = "1.0.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time"] }
indexmap = "2.2.5"
async-trait = "0.1.78"
tree-sitter = "0.25.3"
utils-tree-sitter = { path = "../utils-tree-sitter", features = [
  "all",
], version = "0.1.0" }
splitter-tree-sitter = { path = "../splitter-tree-sitter", version = "0.1.0" }
text-splitter = { version = "0.25.1" }
simsimd = { version = "6.4.1", optional = true }
rayon = { version = "1.1.0", optional = true }
md5 = "0.7.0"
fxhash = "0.2.1"
ordered-float = "5.0.0"
futures = "0.3"
clap = { version = "4.5.14", features = ["derive"] }
regex = "1.10.6"


surrealdb = { version = "2.2.1", features = [
  "kv-surrealkv",
  "kv-mem",
  "runtime-tokio",
] }

[build-dependencies]
cc = "1"

[features]
default = ["simsimd", "rayon"]
rayon = ["dep:rayon", "indexmap/rayon"]
simsimd = ["dep:simsimd"]
llama_cpp = ["dep:llama-cpp-2"]
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
stress_test = []

[dev-dependencies]
assert_cmd = "2.0.14"
